--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Hello World!</h1>
     <h2>Hello again!</h2>
-
+    <div class="main">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam commodi quam dolor nobis omnis autem labore fugit alias ipsum placeat cum fugiat, quod odit ex obcaecati tenetur rerum amet, ipsam veritatis, beatae quis. Praesentium omnis nostrum nobis itaque dolore sunt inventore, voluptatem libero vitae? Animi quia ea cupiditate error sunt?
+    </div>
 
     <footer>footer</footer>
 </body>
